# zserio

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CNAME  CONTRIBUTING.md  LICENSE  README.md  _config.yml  build.xml  findbugs_filter.xml  pom.xml  sonar-project.properties
test/: .clang-tidy  .clang-tidy-gen  CMakeLists.txt  CppcheckSuppressions.txt  build.xml  mypy.ini  pylintrc.txt  pylintrc_test.txt  spotbugs_filter.xml  tests.py
test/arguments/allow_implicit_arrays/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml  spotbugs_filter.xml
test/arguments/java_version8/: build.xml
test/arguments/java_version9/: build.xml
test/arguments/set_cpp_allocator/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt
test/arguments/set_top_level_package/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml  findbugs_filter.xml  spotbugs_filter.xml
test/arguments/use_polymorphic_allocator/: CMakeLists.txt
test/arguments/with_bit_position/: CMakeLists.txt  ClangTidySuppressions.txt
test/arguments/with_bit_position_code/: CMakeLists.txt  ClangTidySuppressions.txt
test/arguments/with_inspector_code/: CMakeLists.txt  DisabledCMakeLists.txt
test/arguments/with_parsing_info_code/: CMakeLists.txt  ClangTidySuppressions.txt
test/arguments/with_range_check_code/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml
test/arguments/with_reflection_code/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt
test/arguments/with_sources_amalgamation/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt
test/arguments/with_type_info_code/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  spotbugs_filter.xml
test/arguments/with_validation_code/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  findbugs_filter.xml  spotbugs_filter.xml
test/arguments/without_cross_extension_check/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/arguments/without_grpc_code/: CMakeLists.txt  build.xml
test/arguments/without_pubsub_code/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/arguments/without_service_code/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/arguments/without_sources_amalgamation/: CMakeLists.txt
test/arguments/without_sql_code/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/arguments/without_writer_code/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml
test/core/: build.xml
test/errors/alignment_error/: build.xml
test/errors/array_types_error/: build.xml
test/errors/base_types_error/: build.xml
test/errors/bitmask_types_error/: build.xml
test/errors/builtin_types_error/: build.xml
test/errors/choice_types_error/: build.xml
test/errors/comments_error/: build.xml
test/errors/compatibility_error/: CMakeLists.txt  build.xml
test/errors/constants_error/: build.xml
test/errors/constraints_error/: build.xml
test/errors/cpp_error/: build.xml
test/errors/cpp_generator_error/: CMakeLists.txt
test/errors/default_values_error/: build.xml
test/errors/enumeration_types_error/: build.xml
test/errors/explicit_parameters_error/: build.xml
test/errors/expressions_error/: build.xml
test/errors/extended_members_error/: build.xml
test/errors/field_names_error/: build.xml
test/errors/functions_error/: build.xml
test/errors/identifiers_error/: build.xml
test/errors/indexed_offsets_error/: build.xml
test/errors/java_generator_error/: build.xml
test/errors/literals_error/: build.xml
test/errors/member_access_error/: build.xml
test/errors/offsets_error/: build.xml
test/errors/optional_members_error/: build.xml
test/errors/packages_error/: build.xml
test/errors/parameterized_types_error/: build.xml
test/errors/parametrized_types_error/: build.xml
test/errors/pubsub_types_error/: build.xml
test/errors/rules_error/: build.xml
test/errors/service_types_error/: build.xml
test/errors/sql_constraints_error/: build.xml
test/errors/sql_databases_error/: build.xml
test/errors/sql_tables_error/: build.xml
test/errors/sql_virtual_tables_error/: build.xml
test/errors/sql_without_rowid_tables_error/: build.xml
test/errors/structure_types_error/: build.xml
test/errors/subtypes_error/: build.xml
test/errors/syntax_error/: build.xml
test/errors/templates_error/: build.xml
test/errors/type_names_error/: build.xml
test/errors/union_types_error/: build.xml
test/extensions/: CMakeLists.txt  build.xml  pylintrc.txt  pylintrc_test.txt  tests.py
test/language/alignment/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/language/array_types/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  spotbugs_filter.xml
test/language/base_types/: CMakeLists.txt  build.xml
test/language/bitmask_types/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/language/builtin_types/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml  spotbugs_filter.xml
test/language/choice_types/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml  spotbugs_filter.xml
test/language/comments/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  vnu_filter.txt
test/language/constants/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  spotbugs_filter.xml
test/language/constraints/: CMakeLists.txt  ClangTidySuppressions.txt  build.xml
test/language/default_values/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml
test/language/enumeration_types/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml
test/language/explicit_parameters/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  spotbugs_filter.xml
test/language/expressions/: CMakeLists.txt  ClangTidySuppressions.txt  CppcheckSuppressions.txt  build.xml  spotbugs_filter.xml
test/language/extended_members/: CMakeLists.txt  build.xml  (+3 more)
test_cpp_project/: CMakeLists.txt
(+25091 files in other folders)
